# Logbook-Maker

./: .gitignore  README.md  pyproject.toml
src/logbook_maker/: __init__.py  __main__.py  processor.py
tests/: test_processor.py
