[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logbook-maker"
version = "0.1.0"
description = "Annotate PDF logbooks with page numbers and Controlled Copy watermarks."
readme = "README.md"
authors = [{ name = "Logbook Maker" }]
requires-python = ">=3.9"
dependencies = [
    "pypdf>=3.8",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
logbook-maker = "logbook_maker.processor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
